--- a/style.css
+++ b/style.css
@@ -20,18 +20,35 @@ header {
   display: flex;
   flex-direction: column;
   text-align: center;
+  align-items: center;
+}
+
+header img {
+ width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+
+.logo {
+  width: 80px;
+  height: auto;
+  margin: 0.5rem 0;
 }
 
 header h1 {
-  font-size: 2rem;
+  font-size: 3rem;
   margin-bottom: 0.5rem;
  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
  text-shadow: 2px 9px  rgba(0, 0, 0, 0.7);
+ width: 100%;
 }
 
 #watchword {
   font-style: italic;
   font-size: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* Layout */
