--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 
 /* Header */
 header {
-  background-color: #6C5CE7;
+  background-color: black;
   color: white;
   padding: 1rem 2rem;
   display: flex;
@@ -38,7 +38,7 @@ header img {
 header h1 {
   font-size: 3rem;
   margin-bottom: 0.5rem;
- box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+ box-shadow: 0 4px 6px rgba(219, 213, 213, 0.3);
  text-shadow: 2px 9px  rgba(0, 0, 0, 0.7);
  width: 100%;
 }
@@ -149,6 +149,7 @@ margin-top: 3rem;
   gap: 1rem;
   flex-wrap: wrap;
   margin-bottom: 2rem;
+  justify-content: center;
 }
 
 .project-card {
@@ -156,9 +157,33 @@ margin-top: 3rem;
   border: 2px solid #6C5CE7;
   padding: 1rem;
   border-radius: 8px;
-  flex: 1 1 250px;
-  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+  flex: 1 1 300px;
+  box-shadow: 0 4px 6px rgba(0,0,0,0.7);
+  max-width: 300%;
+  overflow: hidden;
+  transition: transform 0.3s ease;
 }
+
+.project-card:hover {
+  transform: translateY(-5px);
+}
+
+.project-card img {
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  display: block;
+  box-shadow: 0 4px 6px rgba(0,0,0,0.7);
+  transition: transform 0.4s ease, filter 0.3s ease;
+  
+}
+
+/* Hover Effect */
+.project-img:hover {
+  transform: scale(1.05);
+  filter: brightness(1.1) contrast(1.1);
+}
+
 
 /* Testimonials */
 .testimonials blockquote {
@@ -236,6 +261,14 @@ margin-top: 3rem;
 
   #watchword {
     font-size: 0.9rem;
+  }
+  .featured {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .project-card {
+    width: 90%;
   }
 
 }
