--- a/style.css
+++ b/style.css
@@ -157,9 +157,10 @@ margin-top: 3rem;
   border: 2px solid #6C5CE7;
   padding: 1rem;
   border-radius: 8px;
-  flex: 1 1 300px;
+  flex: 1 1 250px;
   box-shadow: 0 4px 6px rgba(0,0,0,0.7);
-  max-width: 30%;
+ /* max-width: 30%;*/
+ text-align: center;
   overflow: hidden;
   transition: transform 0.3s ease;
 }
@@ -170,8 +171,9 @@ margin-top: 3rem;
 
 .project-card img {
   width: 100%;
-  height: 100%;
-  border-radius: 20px;
+  height: auto;
+  border-radius: 8px;
+  /*border-radius: 20px;*/
   display: block;
   box-shadow: 0 4px 6px rgba(0,0,0,0.7);
   transition: transform 0.4s ease, filter 0.3s ease;
@@ -238,14 +240,14 @@ margin-top: 3rem;
     padding: 1rem;
   }
 
-  .featured {
+  /*.featured {
     flex-direction: column;
     gap: 1rem;
-  }
+  }*/
 
-  .project-card {
+  /*.project-card {
     flex: 1 1 100%;
-  }
+  }*/
   .footer {
     padding: 0.8rem;
     font-size: 0.9rem;
@@ -268,6 +270,12 @@ margin-top: 3rem;
 
   .project-card {
     width: 90%;
+  }
+  .project-card img {
+    width: 100%;
+    height: auto;
+    display: block;
+    border-radius: 8px;
   }
 
 }
