--- a/style.css
+++ b/style.css
@@ -159,8 +159,8 @@ margin-top: 3rem;
   border-radius: 8px;
   flex: 1 1 250px;
   box-shadow: 0 4px 6px rgba(0,0,0,0.7);
- /* max-width: 30%;*/
- text-align: center;
+  max-width: 30%;
+  text-align: center;
   overflow: hidden;
   transition: transform 0.3s ease;
 }
@@ -171,7 +171,7 @@ margin-top: 3rem;
 
 .project-card img {
   width: 100%;
-  height: auto;
+  height: 100%;
   border-radius: 8px;
   /*border-radius: 20px;*/
   display: block;
@@ -273,7 +273,7 @@ margin-top: 3rem;
   }
   .project-card img {
     width: 100%;
-    height: auto;
+    height: 100%;
     display: block;
     border-radius: 8px;
   }
