--- a/style.css
+++ b/style.css
@@ -145,21 +145,22 @@ margin-top: 3rem;
 
 /* Featured Work */
 .featured {
-  display: flex;
-  gap: 2rem;
-  flex-wrap: wrap;
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: repeat(2, 2fr);
   margin-bottom: 2rem;
-  justify-content: center;
+  max-width: 100%;
+  justify-items: center;
 }
 
 .project-card {
   background-color: #FFEAA7;
   border: 2px solid #6C5CE7;
-  flex: 1 1 300px;
   box-shadow: 0 4px 6px rgba(0,0,0,0.7);
-  max-width: 30%;
   overflow: hidden;
   transition: transform 0.3s ease;
+  width: 70%;
+  column-gap: none;
 }
 
 .project-card:hover {
@@ -169,7 +170,7 @@ margin-top: 3rem;
 .project-card img {
   width: 100%;
   height: 100%;
-  display: block;
+  display: grid;
   box-shadow: 0 4px 6px rgba(0,0,0,0.7);
   transition: transform 0.4s ease, filter 0.3s ease;
 }
